# imagine-mcp

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .infisical.json  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  apply_diff.py  diff.patch  dispatch_generate_fix.py  docker-compose.http.yml  fix_conftest.py  fix_imports.py  grok_cleanup.diff  package.json  pnpm-lock.yaml  pyproject.toml  refactor_server.py  renovate.json  restore_server.py  server.json  server.py  server_diff.patch  server_diff.txt  server_fix.py  smithery.yaml  test.py  tests_fix.py  update_dispatcher.py  vitest.config.ts  wrangler.deploy.template.jsonc  wrangler.jsonc
.Jules/: palette.md
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  best_practices.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/rulesets/: main.json
.github/workflows/: cd.yml  ci.yml  refresh-ranks.yml
.jules/: bolt.md  palette.md  sentinel.md
data/leaderboard_snapshots/: 2026-04-24.json  2026-06-07.json
docs/: models.md  setup-manual.md  setup-with-agent.md
hooks/: hooks.json
scripts/: cf_deploy_config.mjs  cf_full_flow.py  clean-venv.mjs  deploy_cf.py  fetch_leaderboards.py  gen_models_table.py
skills/image-describe/: SKILL.md
src/: worker.ts
src/imagine_mcp/: __init__.py  __main__.py  cache.py  cli.py  config.py  credential_state.py  dispatcher.py  errors.py  media.py  models.py  relay_schema.py  relay_setup.py  security.py  server.py
src/imagine_mcp/docs/: config.md  generate.md  understand.md
src/imagine_mcp/providers/: base.py  gemini.py  grok.py  openai.py
tests/: cloudflare-workers-stub.ts  conftest.py  conftest_cf.py  test_cache.py  test_cf_core_resolves.py  test_cli.py  test_config.py  test_config_open_relay_registered.py  test_coverage_fallback.py  test_credential_state_stdio_no_fallback.py  test_credential_state_unit.py  test_credentials_for_current_request.py  test_dependency_security.py  test_deploy_cf_template.py  test_dispatch.py  test_dispatcher.py  test_dispatcher_validation_ext.py  test_errors.py  test_fetch_leaderboards.py  test_fetch_leaderboards_security.py  test_g6_ux_status_accuracy.py  test_gen_models_table.py  test_generate_selection.py  test_help_caching.py  test_live_mcp.py  test_main_entry.py  test_media.py  test_models.py  test_multi_user.py  test_multiuser_status_accuracy.py  test_output_mode.py  test_per_plugin_storage_migration.py  test_perf_env_scan.py  test_providers_gemini.py  test_providers_gemini_generate.py  test_providers_grok.py  test_providers_grok_video.py  test_providers_openai.py  test_relay_schema.py  test_relay_setup.py  (+13 more)
tests/fixtures/: lb_aa_text_to_image.html  lb_lmarena_vision.html
tests/integration/: test_multi_user_remote.py
