[project]
name = "imagine-mcp"
version = "0.1.0"
description = "MCP server for image/video understanding and generation (2x2x3 architecture)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "fastmcp>=0.4",
    "pydantic>=2.0",
    "httpx>=0.27",
    "google-genai>=0.3",
    "openai>=1.50",
    "pillow>=10.0",
]

[project.scripts]
imagine-mcp = "imagine_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imagine_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9",
]
