[project]
name = "imagine-mcp"
version = "1.6.0-beta.2"
description = "MCP server for image/video understanding & generation (Gemini/OpenAI/Grok)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "n24q02m" }]
requires-python = "==3.13.*"
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "image-generation",
    "video-generation",
    "image-understanding",
    "multimodal",
    "gemini",
    "openai",
    "grok",
    "claude",
    "cursor",
    "copilot",
    "antigravity",
    "codex",
    "opencode",
    "gemini-cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.27.2",
    "fastmcp>=3.4.2",
    "pydantic>=2.13.4,<2.14",
    "pydantic-settings>=2.14.1",
    "httpx>=0.28.1,<1",
    "google-genai>=2.8.0",
    "openai>=2.41.0",
    "pillow>=12.2.0",
    "diskcache>=5.6.3",
    "loguru>=0.7.3",
    "n24q02m-mcp-core>=1.17.2,<2",
    "platformdirs>=4.10.0",
    # Security floors: transitive deps pinned to patched releases.
    # urllib3 < 2.7.0 -> PYSEC-2026-141/142; idna < 3.15 -> CVE-2026-45409.
    "urllib3>=2.7.0",
    "idna>=3.18",
]

[project.scripts]
imagine-mcp = "imagine_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/n24q02m/imagine-mcp"
Documentation = "https://github.com/n24q02m/imagine-mcp#readme"
Repository = "https://github.com/n24q02m/imagine-mcp"
Issues = "https://github.com/n24q02m/imagine-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/imagine_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.4.0",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.16",
    "ty>=0.0.44",
    "pre-commit>=4.6.0",
    "syrupy>=5.3.1",
    "beautifulsoup4>=4.14.3",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "live: live API calls (requires real credentials, slow)",
    "integration: in-process integration tests",
    "security: SSRF / path traversal / injection boundary tests",
]
addopts = "-m 'not live' --strict-markers"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
possibly-missing-attribute = "ignore"

[tool.coverage.report]
# v1.0.0 baseline: 48% (live provider + relay paths are gated under @pytest.mark.live
# and not counted). Target for v1.1 once fixtures cover real provider responses: 94%.
fail_under = 45
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "src/imagine_mcp/__init__.py:__version__",
    "server.json:version",
    ".claude-plugin/plugin.json:version",
]
tag_format = "v{version}"
branch = "main"
commit_parser = "conventional"
commit_message = "chore(release): v{version} [skip ci]"
major_on_zero = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix"]
minor_tags = ["feat"]
patch_tags = ["fix"]
